# usaco-standings-bot

./: .dockerignore  .gitignore  Cargo.toml  DEPLOY.md  Dockerfile
.github/workflows/: ci.yml  docker.yml
deploy/: deploy.sh
src/: main.rs
usaco-standings-scraper/: Cargo.toml
