[package]
name = "usaco-standings-bot"
version = "0.1.0"
edition = "2021"
authors = ["skittles1412"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/skittles1412/usaco-standings-bot"
description = """A Discord bot for looking up past USACO results."""

[workspace]
members = [
    "usaco-standings-scraper",
]
resolver = "2"

[dependencies]
anyhow = { version = "1.0.103", features = ["backtrace"] }
chrono = "0.4.45"
poise = "0.6.2"
readable = "0.16.0"
regex = "1.13.0"
reqwest = { version = "0.13.4", features = ["gzip", "brotli", "deflate", "zstd", "http2"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
usaco-standings-scraper = { version = "0.1.0", path = "usaco-standings-scraper" }
