[package]
name = "usaco-standings-scraper"
version = "0.1.0"
edition = "2021"
authors = ["skittles1412"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/skittles1412/usaco-standings-bot"
description = """A web scraper for past USACO results."""

[dependencies]
anyhow = "1.0.103"
http = "1.4.2"
scraper = "0.27.0"
serde = { version = "1.0.228", features = ["derive"], optional = true }
tokio = { version = "1.52.3", features = ["macros", "rt"] }
tracing = "0.1.44"
url = "2.5.8"

[features]
default = ["serde"]

[dev-dependencies]
chrono = "0.4.45"
reqwest = { version = "0.13.4", features = ["gzip", "brotli", "deflate", "zstd", "http2"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["macros", "rt", "rt-multi-thread"] }
tracing-subscriber = "0.3.23"
